# cpp-animechan

./: CMakeLists.txt  README.md  install.sh
assets/: demo.tape
include/: find_quote.h
src/: find_quote.cpp  main.cpp
